force-app/main/default/objects/CMI_Data_Queue__c/CMI_Data_Queue__c.object-meta.xml
<CustomObject>
    <label>CMI Data Queue</label>
    <nameField>
        <displayFormat>CMIQ-{0000000000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CMI Data Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>