force-app/main/default/objects/CMI_Data_Queue__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CMI Data Queues</relationshipLabel>
    <relationshipName>CMI_Data_Queues</relationshipName>
    <type>Lookup</type>
</CustomField>