force-app/main/default/objects/CMI_Data_Queue__c/fields/No_of_retries__c.field-meta.xml
<CustomField>
    <fullName>No_of_retries__c</fullName>
    <label>No. of retries</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>